feat: shadow5, shadow6 추가

--- a/stories/elements/core/shadow/Shadow.stories.mdx
+++ b/stories/elements/core/shadow/Shadow.stories.mdx
@@ -35,6 +35,14 @@ import BoxWithShadow from './BoxWithShadow';
            					type: 'shadow4',
            					content: 'xlarge 버튼 등에 사용',
            				},
+						{
+							type: 'shadow5',
+							content: '400이상의 컬러가 사용 된 요소에 shadow1 수준의 높이감을 줄 때 사용',
+						},
+						{
+							type: 'shadow6',
+							content: '상세페이지 Fab 등 기본 shadow보다 깊이감이 더 필요한 강조 UI 요소에 사용',
+						},
            			],
            		};
            	},
