feat: File 관련 컴포넌트 리디자인, error 추가

--- a/stories/components/dataDisplay/list/fileList/FileList.stories.mdx
+++ b/stories/components/dataDisplay/list/fileList/FileList.stories.mdx
@@ -67,7 +67,6 @@ export const Default = (args, { argTypes }) => ({
                 <div :style="full ? 'width: 100%' : ''">
                  <FileInput v-if="isRemovable" @uploadFiles="handleUploadFiles"/>
                  <FileSummary v-else :full="full" :length="filesData.length" />
-                 <Divider type="dash" style="margin-top: 8.5px; margin-bottom: 8.5px;"/>
                  <FileList :files="filesData"
                     :is-removable="isRemovable"
                     :full="full"
@@ -78,7 +77,7 @@ export const Default = (args, { argTypes }) => ({
                  />
                 </div>
              </div>`,
-   components: { FileList, Divider, FileSummary, FileInput },
+   components: { FileList, FileSummary, FileInput },
 });
 
 # FileList
